# rag-openagenda

./: .coverage  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  docker_compose.yml  main.py  mkdocs.yml  pyproject.toml  rag_memory.json
.github/workflows/: cd.yml  ci.yml
app/: api_test.py  config.py  document_service.py  filter_service.py  lexical_service.py  main.py  memory_service.py  rag_service.py  retrieval_service.py  schemas.py  security.py  trace_service.py
artifacts/: rag_trace.jsonl
dashboard/: streamlit_app.py
docs/: api.md  index.md
faiss_index_openagenda/: index.faiss  index.pkl
notebook/: notebook.ipynb  rag_evaluation.ipynb
site/: 404.html  index.html  objects.inv
site/api/: index.html
site/search/: search_index.json
tests/: api_test.py  test_document_service.py  test_filter_service.py  test_lexical_service.py  test_main.py  test_memory_service.py  test_rag_service.py  test_retrieval_service.py  test_security.py  test_trace_service.py
workflows/: cd.yml  ci.yml
