[project]
name = "pocrag"
version = "0.1.0"
description = "POC RAG pour la recommandation d'événements culturels via OpenAgenda"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "altair<5",
    "datasets>=4.8.2",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.115.0",
    "ipykernel>=6.29.0",
    "ipywidgets>=8.1.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-mistralai>=0.2.0",
    "matplotlib>=3.8.0",
    "mistralai>=2.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-autorefs>=1.4.4",
    "mkdocs-material>=9.7.5",
    "mkdocstrings[python]>=1.0.3",
    "numpy>=1.26.0,<2.0.0",
    "openai>=2.29.0",
    "pandas>=2.2.0,<3.0.0",
    "pydantic>=2.9.0",
    "pytest>=8.3.0",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.0.1",
    "ragas>=0.4.3",
    "requests>=2.32.0",
    "streamlit>=1.39.0",
    "uvicorn>=0.30.0",
]